--- a/ui/templates/navigation.html
+++ b/ui/templates/navigation.html
@@ -1,9 +1,8 @@
 {% load static %}
 <nav class="navbar navbar-default">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <img src="{% static 'images/logo_en.jpg' %}" />
-            <a class="navbar-brand" href="#">{$ 'APP_NAME' | translate $}</a>
+        <div class="navbar-logo-container">
+            <img src="{% static 'images/logo_en.jpg' %}"/>
         </div>
     </div>
 </nav>
