Add change language logic; style loading overlay

--- a/ui/templates/angular/partials/directives/language-choice.html
+++ b/ui/templates/angular/partials/directives/language-choice.html
@@ -1,5 +1,5 @@
 <div class="col-xs-6 col-md-3 language-choice-button-container">
-    <div class="language-choice-button">
+    <div class="language-choice-button" ng-click="changeLanguage()">
         {$ language.name $}
     </div>
 </div>
