--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -54,13 +54,16 @@
     <title>{% block title %}{$ 'APP_NAME' | translate $}{% endblock title %}</title>
 </head>
 <body>
-    {% csrf_token %}
-    {% block body %}
+{% csrf_token %}
+{% block body %}
+    <div class="wrapper">
         {% include 'navigation.html' %}
         <div class="container">
-        {% block content %}{% endblock content %}
+            {% block content %}{% endblock content %}
         </div>
-    {% endblock body %}
+    </div>
+    {% include 'footer.html' %}
+{% endblock body %}
 
 
 </body>
