--- a/ui/templates/angular/partials/directives/language-choice.html
+++ b/ui/templates/angular/partials/directives/language-choice.html
@@ -1,5 +1,5 @@
-<div class="col-xs-6 col-md-3 language-choice-button-container">
-    <div class="language-choice-button" ng-click="changeLanguage()">
+<div class="col-xs-6 col-md-3 button-container">
+    <div class="language-choice-button" ng-click="changeLanguage(); navigateTo();">
         {$ language.name $}
     </div>
 </div>
