--- a/ui/templates/footer.html
+++ b/ui/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container">
-        <p>Other links:</p>
-        <a href="http://refugee.info" target="_blank">Refugee info</a>
-        <a href="http://asylo.gov.gr/en/?page_id=1031" target="_blank">Relocation decisions</a>
+        <p>{$ 'OTHER_LINKS' | translate $}</p>
+        <a href="http://refugee.info" target="_blank">{$ 'REFUGEE_INFO' | translate $}</a>
+        <a href="http://asylo.gov.gr/en/?page_id=1031" target="_blank">{$ 'RELOCATION_DECISONS' | translate $}</a>
     </div>
 </footer>
