Add input screen

--- a/ui/templates/angular/partials/searching-for.html
+++ b/ui/templates/angular/partials/searching-for.html
@@ -3,7 +3,7 @@
     <p>{$ 'SELECT_ONE' | translate $}</p>
 </div>
 <div class="row button-container">
-    <a class="searching-for-choice-button" ui-sref="home">
+    <a class="searching-for-choice-button" ui-sref="input">
         <span>{$ 'APPOINTMENT_DATES' | translate $}</span>
         <i class="glyphicon glyphicon-menu-right"></i>
     </a>
