--- a/ui/templates/navigation.html
+++ b/ui/templates/navigation.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-logo-container">
-            <img src="{% static 'images/logo_en.jpg' %}"/>
+            <a href="#" ><img src="{% static 'images/logo_en.jpg' %}"/></a>
         </div>
     </div>
 </nav>
