--- a/ui/templates/angular/partials/input.html
+++ b/ui/templates/angular/partials/input.html
@@ -1,7 +1,7 @@
 <div class="row button-container" xmlns="http://www.w3.org/1999/html">
     <a class="searching-for-choice-button" ui-sref="searching">
-        <i class="glyphicon glyphicon-menu-left" style="padding: 10px"></i>
-        <div class="text-center" style="flex: 1">
+        <back-button></back-button>
+        <div class="text-center">
             <p>{$ 'APPOINTMENT_DATES' | translate $}</p>
             <p>{$ 'ENTER_INFO_BELOW' | translate $}</p>
         </div>
