--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -34,6 +34,9 @@
         <script type="text/javascript" src='{% static 'js/searcherApp/controllers/InputController.js' %}'></script>
 
         <script type="text/javascript" src='{% static 'js/searcherApp/directives/languageChoice.js' %}'></script>
+        <script type="text/javascript" src='{% static 'js/searcherApp/directives/forwardButton.js' %}'></script>
+        <script type="text/javascript" src='{% static 'js/searcherApp/directives/backButton.js' %}'></script>
+
     {% endcompress %}
 
     <script type="text/javascript">
