--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -32,6 +32,7 @@
 
         <script type="text/javascript" src='{% static 'js/searcherApp/controllers/BaseController.js' %}'></script>
         <script type="text/javascript" src='{% static 'js/searcherApp/controllers/InputController.js' %}'></script>
+        <script type="text/javascript" src='{% static 'js/searcherApp/controllers/ResultsController.js' %}'></script>
 
         <script type="text/javascript" src='{% static 'js/searcherApp/directives/languageChoice.js' %}'></script>
         <script type="text/javascript" src='{% static 'js/searcherApp/directives/forwardButton.js' %}'></script>
