--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -37,7 +37,7 @@
         <script type="text/javascript" src='{% static 'js/searcherApp/directives/languageChoice.js' %}'></script>
         <script type="text/javascript" src='{% static 'js/searcherApp/directives/forwardButton.js' %}'></script>
         <script type="text/javascript" src='{% static 'js/searcherApp/directives/backButton.js' %}'></script>
-
+        <script type="text/javascript" src='{% static 'js/searcherApp/directives/inputForm.js' %}'></script>
     {% endcompress %}
 
     <script type="text/javascript">
