--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -3,7 +3,10 @@
 {% load djng_tags %}
 
 <!DOCTYPE html>
-<html ng-app="searcherApp" ng-controller="BaseController as baseController">
+<html ng-app="searcherApp"
+      ng-controller="BaseController as baseController"
+      lang="{$ baseController.language $}"
+      dir="{$ baseController.getDirection() $}">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
