--- a/ui/templates/angular/partials/results.html
+++ b/ui/templates/angular/partials/results.html
@@ -1,5 +1,5 @@
 <div class="row button-container">
-    <a class="searching-for-choice-button" ui-sref="home">
+    <a class="searching-for-choice-button" ui-sref="input">
         <back-button></back-button>
         <span>{$ 'APPOINTMENT_DATES' | translate $}</span>
     </a>
