--- a/ui/templates/angular/partials/directives/language-choice.html
+++ b/ui/templates/angular/partials/directives/language-choice.html
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-md-3 button-container">
+<div class="col-xs-6 button-container">
     <div class="language-choice-button" ng-click="changeLanguage(); navigateTo();">
         {$ language.name | uppercase | translate $}
     </div>
