--- a/ui/templates/angular/partials/language.html
+++ b/ui/templates/angular/partials/language.html
@@ -1,8 +1,10 @@
 <div class="view-header row">
-    <p>{$ "SELECT_LANGUAGE_EN" | translate $}</p>
-    <p>{$ "SELECT_LANGUAGE_EL" | translate $}</p>
-    <p>{$ "SELECT_LANGUAGE_AR" | translate $}</p>
-    <p>{$ "SELECT_LANGUAGE_FA" | translate $}</p>
+    <div class="view-header-inner">
+        <p>{$ "SELECT_LANGUAGE_EN" | translate $}</p>
+        <p>{$ "SELECT_LANGUAGE_EL" | translate $}</p>
+        <p>{$ "SELECT_LANGUAGE_AR" | translate $}</p>
+        <p>{$ "SELECT_LANGUAGE_FA" | translate $}</p>
+    </div>
 </div>
 
 <div class="row">
