--- a/ui/templates/angular/partials/results.html
+++ b/ui/templates/angular/partials/results.html
@@ -1,9 +1,11 @@
-<div class="row button-container">
-    <a class="searching-for-choice-button" ui-sref="input">
-        <back-button></back-button>
-        <span>{$ 'APPOINTMENT_DATES' | translate $}</span>
-    </a>
-</div>
+<a class="view-header row" ui-sref="input">
+    <back-button></back-button>
+    <div class="view-header-inner">
+        <p class="bigger">{$ 'APPOINTMENT_DATES' | translate $}</p>
+    </div>
+    <div class="icon-fillter"></div>
+</a>
+
 <h1 class="header-centered">{$ "RESULTS" | translate $}:</h1>
 <p>{$ 'APPOINTMENT_RESULTS' | translate: {number: ctrl.appointment.registration_number,
     date: ctrl.appointment.date, office: ctrl.appointment.office_name} $}
