--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -69,7 +69,11 @@
     <div class="wrapper">
         {% include 'navigation.html' %}
         <div class="container">
-            {% block content %}{% endblock content %}
+            <div class="row center-content">
+                <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 main-container">
+                    {% block content %}{% endblock content %}
+                </div>
+            </div>
         </div>
     </div>
     {% include 'footer.html' %}
