--- a/ui/templates/footer.html
+++ b/ui/templates/footer.html
@@ -1,7 +1,12 @@
 <footer>
     <div class="container">
-        <p>{$ 'OTHER_LINKS' | translate $}</p>
-        <a href="http://refugee.info" target="_blank">{$ 'REFUGEE_INFO' | translate $}</a>
-        <a href="http://asylo.gov.gr/en/?page_id=1031" target="_blank">{$ 'RELOCATION_DECISONS' | translate $}</a>
+        <div class="row center-content">
+            <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 main-container">
+                <p>{$ 'OTHER_LINKS' | translate $}:</p>
+                <a href="http://refugee.info" target="_blank">{$ 'REFUGEE_INFO' | translate $}</a>
+                <a href="http://asylo.gov.gr/en/?page_id=1031" target="_blank">{$ 'RELOCATION_DECISONS' | translate
+                    $}</a>
+            </div>
+        </div>
     </div>
 </footer>
