--- a/ui/static/scss/main.scss
+++ b/ui/static/scss/main.scss
@@ -5,7 +5,7 @@ $button-color: #F2F3F4;
 $footer-color: #F2F3F4;
 $text-color: #000000;
 $text-color-muted: #222222;
-$accent-color: #4CAE4E;
+$accent-color: #FFCA38;
 $text-reversed-color: #f5f5f5;
 $text-reversed-color-muted: #E5E5E5;
 
