--- a/ui/templates/angular/partials/results.html
+++ b/ui/templates/angular/partials/results.html
@@ -1,5 +1,5 @@
 <a class="view-header row" ui-sref="input">
-    <back-button></back-button>
+    <back-button direction="{$ baseController.getDirection() $}"></back-button>
     <div class="view-header-inner">
         <p class="bigger">{$ 'APPOINTMENT_DATES' | translate $}</p>
     </div>
