--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -70,7 +70,7 @@
         {% include 'navigation.html' %}
         <div class="container">
             <div class="row center-content">
-                <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 main-container">
+                <div class="col-xs-12 col-sm-10 col-md-8 main-container">
                     {% block content %}{% endblock content %}
                 </div>
             </div>
