Frontend fixes, added info about updating data

--- a/ui/static/scss/main.scss
+++ b/ui/static/scss/main.scss
@@ -283,6 +283,9 @@ back-button, forward-button {
   }
 }
 
+.update-data-info {
+  padding-top: 100px;
+}
 // loading overlay
 
 .sk-fading-circle .sk-circle:before {
