--- a/ui/templates/angular/partials/results.html
+++ b/ui/templates/angular/partials/results.html
@@ -11,3 +11,4 @@
 </p>
 
 <a href="https://www.google.com/maps/place/{$ ctrl.appointment.office.en.address $}">{$ 'CLICK_FOR_MAP' | translate $}</a>
+<update-data-info></update-data-info>
