--- a/ui/templates/angular/partials/searching-for.html
+++ b/ui/templates/angular/partials/searching-for.html
@@ -10,4 +10,4 @@
     <forward-button direction="{$ baseController.getDirection() $}"></forward-button>
 </a>
 
-<p class=""></p>
+<update-data-info></update-data-info>
