--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -41,6 +41,7 @@
         <script type="text/javascript" src='{% static 'js/searcherApp/directives/forwardButton.js' %}'></script>
         <script type="text/javascript" src='{% static 'js/searcherApp/directives/backButton.js' %}'></script>
         <script type="text/javascript" src='{% static 'js/searcherApp/directives/inputForm.js' %}'></script>
+        <script type="text/javascript" src='{% static 'js/searcherApp/directives/updateDataInfo.js' %}'></script>
     {% endcompress %}
 
     <script type="text/javascript">
