Improve language picker

--- a/ui/templates/angular/partials/language.html
+++ b/ui/templates/angular/partials/language.html
@@ -1,9 +1,13 @@
 <div class="view-header row">
     <div class="view-header-inner">
-        <p>{$ "SELECT_LANGUAGE_EN" | translate $}</p>
-        <p>{$ "SELECT_LANGUAGE_EL" | translate $}</p>
-        <p>{$ "SELECT_LANGUAGE_AR" | translate $}</p>
-        <p>{$ "SELECT_LANGUAGE_FA" | translate $}</p>
+        <p>Select your language</p>
+        <p>επιλέξτε τη γλώσσα σας</p>
+        <p>الرجاء اختيار لغتك</p>
+        <p>لطفا زبان خود را انتخاب کنید</p>
+        <p>زبان را انتخاب نمایید</p>
+        <p>Zimanê xwe hilbijêrin:</p>
+        <p>اپنی زبان منتخب کریں</p>
+        <p>ਆਪਣੀ ਭਾਸ਼ਾ ਚੁਣੋ:</p>
     </div>
 </div>
 
