--- a/ui/static/scss/main.scss
+++ b/ui/static/scss/main.scss
@@ -110,7 +110,7 @@ body {
   @include align-items(center);
   @include justify-content(center);
   @include flex-direction(row);
-  height: 80px;
+  min-height: 80px;
   margin: 0;
   background-color: $view-header-color;
   color: $text-color;
