--- a/ui/templates/navigation.html
+++ b/ui/templates/navigation.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-logo-container">
-            <a href="#" ><img src="{% static 'images/logo_en.png' %}"/></a>
+            <a href="#" ><img src="{% static 'images/logo_en.png' %}" style="max-width: 90%" /></a>
         </div>
     </div>
 </nav>
