Added moment to translate the dates; added a datetime field to the json that is being sent from app; changing locale based on the translate tool; translating dates

--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src='{% static 'angular-translate/angular-translate.min.js' %}'></script>
     <script type="text/javascript" src='{% static 'angular-translate-loader-static-files/angular-translate-loader-static-files.js' %}'></script>
     <script type="text/javascript" src='{% static 'angular-translate-storage-cookie/angular-translate-storage-cookie.min.js' %}'></script>
+    <script type="text/javascript" src='{% static 'moment/min/moment-with-locales.min.js' %}'></script>
 
     {% compress js %}
         <script type="text/javascript" src='{% static 'js/searcherApp/app.js' %}'></script>
