--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -27,7 +27,16 @@
     <script type="text/javascript" src='{% static 'angular-translate-loader-static-files/angular-translate-loader-static-files.js' %}'></script>
     <script type="text/javascript" src='{% static 'angular-translate-storage-cookie/angular-translate-storage-cookie.min.js' %}'></script>
     <script type="text/javascript" src='{% static 'moment/min/moment-with-locales.min.js' %}'></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-68574649-2', 'auto');
+      ga('send', 'pageview');
+
+    </script>
     {% compress js %}
         <script type="text/javascript" src='{% static 'js/searcherApp/app.js' %}'></script>
 
