Add ability to remove appointments by date range

--- a/ui/templates/admin/custom_index.html
+++ b/ui/templates/admin/custom_index.html
@@ -12,7 +12,7 @@
             </tr>
             <tr>
                 <th>
-                    <a href="">Remove Appointments</a>
+                    <a href="{% url 'remove_appointments' %}">Remove Appointments</a>
                 </th>
             </tr>
         </table>
