Upload spreadsheet view

--- a/ui/templates/admin/custom_index.html
+++ b/ui/templates/admin/custom_index.html
@@ -7,7 +7,7 @@
             <caption>Tasks</caption>
             <tr>
                 <th>
-                    <a href="">Import Spreadsheet</a>
+                    <a href="{% url 'admin:import_spreadsheet' %}">Import Spreadsheet</a>
                 </th>
             </tr>
             <tr>
